tdf#109318 writerfilter: don't increment DropCap lines

I have no idea why the original implementation used ++nLines
when setting aDrop.Lines. Unchanged since mass import from OOo in
2008 commit 614f53dda31f14fe89303dc1809fc29350c1ba29.

Change-Id: If427dcea815e91d2cccb2c11044cdb393bff09e3